added news page

--- a/events_single.html
+++ b/events_single.html
@@ -179,6 +179,17 @@
                         <li>
                                 <a href="future_member.html" title="Future Member">Contact</a>
                         </li>
+                        <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">News <span class="caret"></span></a>
+                                <ul class=" dropdown-menu" role="menu">
+                                    <li class="">
+                                        <a href="news.html" title="News">News</a>
+                                    </li>
+                                    <li>
+                                        <a href="news_single.html?news=news1" title="News Single">News Single Page</a>
+                                    </li>
+                                </ul>
+                        </li>
                         <!-- <li>
                             <a href="contact.html" title="Contact">Contact</a>
                         </li> -->
@@ -519,6 +530,70 @@
                                     <div class="col-sm-4">
                                         <figure>
                                             <a href="assets/img/events/NCHU-2018/IMG_5063.JPG" data-toggle="lightbox" data-gallery="sabb-gallery"><img src="assets/img/events/NCHU-2018/IMG_5063.JPG" alt="" class="event_thumb img-responsive events-item-media-img"></a>
+                                        </figure>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </article><!-- /.sabbi-events-item -->
+                    </div>
+                    
+                </div>
+            </div><!-- /.events_post_single-sagment -->
+            <div class="events_post_single-sagment" id="cricket" style="display: none;">
+                <div class="row">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        <article class="sabbi-events-item">
+                            <a href="#" class="sabbi-events-link">
+                                <figure>
+                                    <img class="sabbi-events-img img-responsive" style="width: 913px; height: 590px; " src="assets/img/events/Cricket_2019/7d2e764e.JPG" alt="thompson">
+                                    <figcaption>
+                                        <h2 class="sabbi-events-title font-md__x" style="color: black;">Cricket in Utah</h2>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                            <div class="events-item-meta">
+                                <div class="events-loc"><i class="ion-location"></i><span class="text">6252 W 6200 S,
+                                    Kearns, UT</span></div>
+                                    <div class="events-date"><i class="ion-calendar"></i><span class="text">13<sup>th</sup>
+                                        July 2019</span></div>
+                                <p class="events-item-meta-text" style="text-align: justify;"></p>
+                                <br>
+                                    <!-- For more details, please visit <a target="_blank" href="http://www.usu.edu/today/index.cfm?id=58311">Click Here</a> -->
+                                </p>
+                            </div>
+                            <div class="events-item-media">
+                                <h4 class="sagment-title">From Media</h4>
+                                <div class="row events-item-media-scoup">
+                                    <div class="col-sm-4">
+                                        <figure>
+                                            <a href="assets/img/events/Cricket_2019/b05c00fe.JPG" data-toggle="lightbox" data-gallery="sabb-gallery"><img src="assets/img/events/Cricket_2019/b05c00fe.JPG" alt="" class="event_thumb img-responsive events-item-media-img"></a>
+                                        </figure>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <figure>
+                                            <a href="assets/img/events/Cricket_2019/e7b2e7fc.JPG" data-toggle="lightbox" data-gallery="sabb-gallery"><img src="assets/img/events/Cricket_2019/e7b2e7fc.JPG" alt="" class="event_thumb img-responsive events-item-media-img"></a>
+                                        </figure>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <figure>
+                                            <a href="assets/img/events/Cricket_2019/IMG_6284.JPG" data-toggle="lightbox" data-gallery="sabb-gallery"><img src="assets/img/events/Cricket_2019/IMG_6284.JPG" alt="" class="event_thumb img-responsive events-item-media-img"></a>
+                                        </figure>
+                                    </div>
+                                </div>
+                                <div class="row events-item-media-scoup">
+                                    <div class="col-sm-4">
+                                        <figure>
+                                            <a href="assets/img/events/Cricket_2019/IMG_6285.JPG" data-toggle="lightbox" data-gallery="sabb-gallery"><img src="assets/img/events/Cricket_2019/IMG_6285.JPG" alt="" class="event_thumb img-responsive events-item-media-img"></a>
+                                        </figure>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <figure>
+                                            <a href="assets/img/events/Cricket_2019/IMG_6304.JPG" data-toggle="lightbox" data-gallery="sabb-gallery"><img src="assets/img/events/Cricket_2019/IMG_6304.JPG" alt="" class="event_thumb img-responsive events-item-media-img"></a>
+                                        </figure>
+                                    </div>
+                                    <!-- <div class="col-sm-4">
+                                        <figure>
+                                            <a href="assets/img/events/Rocky_2018/IMG_1454.JPG" data-toggle="lightbox" data-gallery="sabb-gallery"><img src="assets/img/events/Rocky_2018/IMG_1454.JPG" alt="" class="event_thumb img-responsive events-item-media-img"></a>
                                         </figure>
                                     </div> -->
                                 </div>
