--- a/index.html
+++ b/index.html
@@ -305,6 +305,17 @@
                         <li>
                             <a href="future_member.html" title="Future Member">Contact</a>
                         </li>
+                        <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">News <span class="caret"></span></a>
+                                <ul class=" dropdown-menu" role="menu">
+                                    <li class="">
+                                        <a href="news.html" title="News">News</a>
+                                    </li>
+                                    <li>
+                                        <a href="news_single.html?news=news1" title="News Single">News Single Page</a>
+                                    </li>
+                                </ul>
+                        </li>
                         <!-- <li>
                                 <a href="contact.html" title="Contact">Contact</a>
                             </li> -->
@@ -353,7 +364,7 @@
                                 </div>
                             </li>
                             <li class="seq-step1" id="step2"
-                                style="background:url(assets/img/whiteBanner_v3.png); background-color: black;  background-size:cover">
+                                style="background:url(assets/img/g195.png); background-color: black;  background-size:fit">
                                 <div class="bg-blend"></div>
                                 <div class="seq-content">
 
@@ -370,7 +381,7 @@
                                 </div>
                             </li>
                             <li class="seq-step1" id="step3"
-                                style="background:url(assets/img/slide3.png);  background-size:cover; background-color: black">
+                                style="background:url(assets/img/g95.png);  background-size:cover; background-color: black">
 
                                 <div class="bg-blend"></div>
                                 <div class="seq-content">
