--- a/lab_events.html
+++ b/lab_events.html
@@ -221,6 +221,17 @@
                     <li>
                         <a href="future_member.html" title="Future Member">Contact</a>
                     </li>
+                    <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">News <span class="caret"></span></a>
+                            <ul class=" dropdown-menu" role="menu">
+                                <li class="">
+                                    <a href="news.html" title="News">News</a>
+                                </li>
+                                <li>
+                                    <a href="news_single.html?news=news1" title="News Single">News Single Page</a>
+                                </li>
+                            </ul>
+                    </li>
                     <!-- <li>
                             <a href="contact.html" title="Contact">Contact</a>
                         </li> -->
@@ -253,7 +264,8 @@
                             <a href="events_single.html?event=psc" class="sabbi-events-link">
                                 <figure class="img-hover-zoom">
                                     <img class="sabbi-events-img img-responsive lab_event"
-                                        src="assets/img/events/PAG-2019/20190114_112523.jpg"
+                                    style=""
+                                        src="assets/img/events/PAG-2019/resize-157657718254482381520190114112523.jpg"
                                         alt="thompson">
                                     <figcaption class="event_text">
                                         <h2 class="sabbi-events-title font-md__x " style="color: black;">Plant & Animal Genome Conference
@@ -292,7 +304,7 @@
                     </div>
                     <div class="col-sm-6">
                         <article class="sabbi-events-item">
-                            <a href="events_single.html?event=psc" class="sabbi-events-link">
+                            <a href="events_single.html?event=cricket" class="sabbi-events-link">
                                 <figure class="img-hover-zoom">
                                     <img class="sabbi-events-img img-responsive lab_event"
                                         src="assets/img/events/Cricket_2019/7d2e764e.JPG"
