--- a/events.html
+++ b/events.html
@@ -301,6 +301,17 @@ svg {
                     <li>
                         <a href="future_member.html" title="Future Member">Contact</a>
                     </li>
+                    <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">News <span class="caret"></span></a>
+                            <ul class=" dropdown-menu" role="menu">
+                                <li class="">
+                                    <a href="news.html" title="News">News</a>
+                                </li>
+                                <li>
+                                    <a href="news_single.html?news=news1" title="News Single">News Single Page</a>
+                                </li>
+                            </ul>
+                    </li>
                     <!-- <li>
                         <a href="future_member.html" title="Future Member">Future Member</a>
                     </li> -->
