--- a/lab_conf-talk.html
+++ b/lab_conf-talk.html
@@ -243,6 +243,17 @@
                     <li>
                         <a href="future_member.html" title="Future Member">Contact</a>
                     </li>
+                    <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">News <span class="caret"></span></a>
+                                <ul class=" dropdown-menu" role="menu">
+                                    <li class="">
+                                        <a href="news.html" title="News">News</a>
+                                    </li>
+                                    <li>
+                                        <a href="news_single.html?news=news1" title="News Single">News Single Page</a>
+                                    </li>
+                                </ul>
+                        </li>
                     <!-- <li>
                         <a href="future_member.html" title="Future Member">Future Member</a>
                     </li> -->
@@ -257,6 +268,15 @@
                 </div>
             </div>
     </header>
+    <div class="auth-breadcrumb-wrap">
+            <div class="container">
+                <ol class="breadcrumb sabbi-breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Publications</a></li>
+                    <li class="active">Conferences and Talks</li>
+                </ol>
+            </div>
+        </div><!-- /.auth-breadcrumb-wrap -->
     <div class="container">
         <section class="ripepage-peak">
                 <div class="container">
