--- a/lab_journal.html
+++ b/lab_journal.html
@@ -178,6 +178,17 @@
                     <li>
                         <a href="future_member.html" title="Future Member">Contact</a>
                     </li>
+                    <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">News <span class="caret"></span></a>
+                            <ul class=" dropdown-menu" role="menu">
+                                <li class="">
+                                    <a href="news.html" title="News">News</a>
+                                </li>
+                                <li>
+                                    <a href="news_single.html?news=news1" title="News Single">News Single Page</a>
+                                </li>
+                            </ul>
+                    </li>
                     <!-- <li>
                         <a href="future_member.html" title="Future Member">Future Member</a>
                     </li> -->
@@ -193,6 +204,15 @@
             </div>
         </div>
     </header><!-- /.sabbi-page-header-classic .page-header-lg -->
+    <div class="auth-breadcrumb-wrap">
+            <div class="container">
+                <ol class="breadcrumb sabbi-breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Publications</a></li>
+                    <li class="active">Journal Articles</li>
+                </ol>
+            </div>
+        </div><!-- /.auth-breadcrumb-wrap -->
     <main class="sabbi-page-wrap">
         <section class="section-journal-papers">
             <div class="container">
