research page updated

--- a/lab_research.html
+++ b/lab_research.html
@@ -141,9 +141,18 @@
                     <li>
                         <a href="index.html" title="Home">Home</a>
                     </li>
-                    <li class="active">
-                        <a href="lab_research.html" title="Research">Research</a>
-                    </li>
+                    <li class="dropdown active">
+                            <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" href="#" title="Events"
+                                data-animations="zoomIn">Research <span class="caret"></span></a>
+                            <ul class=" dropdown-menu" role="menu">
+                                <li class="active">
+                                    <a href="lab_research.html" title="Books">Research Page</a>
+                                </li>
+                                <li>
+                                    <a href="research_single.html?research=ai" title="Journal Articles">Research Single Page</a>
+                                </li>
+                            </ul>
+                        </li>
                     <li class="dropdown">
                         <a href="people.html" class="dropdown-toggle" data-hover="dropdown" title="People"
                             data-animations="zoomIn">People<span class="caret"></span></a>
@@ -316,7 +325,7 @@
                                             <p class="meta-text">Computational modeling through <i>pattern
                                                     recognition</i>,
                                                 develop novel algorithms and...</p>
-                                            <a href="#" class="btn btn-unsolemn btn-action read-more">Read More</a>
+                                            <a href="research_single.html?research=ai" class="btn btn-unsolemn btn-action read-more">Read More</a>
                                         </div>
                                     </article>
                                 </div>
@@ -333,7 +342,7 @@
                                                 interactions: Understanding mechanisms of infectious diseases</h2>
                                             <p class="meta-text">Explore cross-kingdom threats and identify novel
                                                 therapeutic candidates...</p>
-                                            <a href="#" class="btn btn-unsolemn btn-action read-more">Read More</a>
+                                            <a href="research_single.html?research=hpi" class="btn btn-unsolemn btn-action read-more">Read More</a>
                                         </div>
                                     </article>
                                 </div>
@@ -351,7 +360,7 @@
                                             <p class="meta-text">Identify novel protein features, train in an AI
                                                 framework,
                                                 implement as web servers... </p>
-                                            <a href="#" class="btn btn-unsolemn btn-action read-more">Read More</a>
+                                            <a href="research_single.html?research=protein" class="btn btn-unsolemn btn-action read-more">Read More</a>
                                         </div>
                                     </article>
                                 </div>
@@ -369,7 +378,7 @@
                                             <p class="meta-text">Investigate diversity of enzymes in soil metagenomes
                                                 and
                                                 develop advanced tools...</p>
-                                            <a href="#" class="btn btn-unsolemn btn-action read-more">Read More</a>
+                                            <a href="research_single.html?research=metagenomics" class="btn btn-unsolemn btn-action read-more">Read More</a>
                                         </div>
                                     </article>
                                 </div>
@@ -388,7 +397,7 @@
                                             <p class="meta-text">Incorporate sensing technology for precise IWM,
                                                 minimize
                                                 damage to crop, environment...</p>
-                                            <a href="#" class="btn btn-unsolemn btn-action read-more">Read More</a>
+                                            <a href="research_single.html?research=agriculture" class="btn btn-unsolemn btn-action read-more">Read More</a>
                                         </div>
                                     </article>
                                 </div>
@@ -405,7 +414,7 @@
                                                 complex -<i>omics</i> bigdata</h2>
                                             <p class="meta-text">Identification of novel expressed genes from
                                                 transcriptomics studies, methylation patterns...</p>
-                                            <a href="#" class="btn btn-unsolemn btn-action read-more">Read More</a>
+                                            <a href="research_single.html?research=ngs" class="btn btn-unsolemn btn-action read-more">Read More</a>
                                         </div>
                                     </article>
                                 </div>
