--- a/index.html
+++ b/index.html
@@ -201,8 +201,17 @@
                         <li class="active">
                             <a href="index.html" title="Home">Home</a>
                         </li>
-                        <li>
-                            <a href="lab_research.html" title="Research">Research</a>
+                        <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" href="#" title="Events"
+                                    data-animations="zoomIn">Research <span class="caret"></span></a>
+                                <ul class=" dropdown-menu" role="menu">
+                                    <li>
+                                        <a href="lab_research.html" title="Books">Research Page</a>
+                                    </li>
+                                    <li  class="">
+                                        <a href="research_single.html?research=ai" title="Journal Articles">Research Single Page</a>
+                                    </li>
+                                </ul>
                         </li>
                         <li class="dropdown">
                             <a href="people.html" class="dropdown-toggle" data-hover="dropdown" title="People"
@@ -441,7 +450,7 @@
                                             OMICS bigdata to novel biological discoveries</h2>
                                         <p class="meta-text">Computational modeling through <i>pattern recognition</i>,
                                             develop novel algorithms and...</p>
-                                        <a href="#" class="btn btn-unsolemn btn-action read-more">Read More</a>
+                                        <a href="research_single.html?research=ai" class="btn btn-unsolemn btn-action read-more">Read More</a>
                                     </div>
                                 </article>
                             </div>
@@ -458,7 +467,7 @@
                                             interactions: Understanding mechanisms of infectious diseases</h2>
                                         <p class="meta-text">Explore cross-kingdom threats and identify novel
                                             therapeutic candidates...</p>
-                                        <a href="#" class="btn btn-unsolemn btn-action read-more">Read More</a>
+                                        <a href="research_single.html?research=hpi" class="btn btn-unsolemn btn-action read-more">Read More</a>
                                     </div>
                                 </article>
                             </div>
@@ -475,7 +484,7 @@
                                             prediction: Annotation of novel proteomes</h2>
                                         <p class="meta-text">Identify novel protein features, train in an AI framework,
                                             implement as web servers... </p>
-                                        <a href="#" class="btn btn-unsolemn btn-action read-more">Read More</a>
+                                        <a href="research_single.html?research=protein" class="btn btn-unsolemn btn-action read-more">Read More</a>
                                     </div>
                                 </article>
                             </div>
@@ -491,7 +500,7 @@
                                             improvement</h2>
                                         <p class="meta-text">Investigate diversity of enzymes in soil metagenomes and
                                             develop advanced tools...</p>
-                                        <a href="#" class="btn btn-unsolemn btn-action read-more">Read More</a>
+                                        <a href="research_single.html?research=metagenomics" class="btn btn-unsolemn btn-action read-more">Read More</a>
                                     </div>
                                 </article>
                             </div>
@@ -508,7 +517,7 @@
                                             management (IWM)</h2>
                                         <p class="meta-text">Incorporate sensing technology for precise IWM, minimize
                                             damage to crop, environment...</p>
-                                        <a href="#" class="btn btn-unsolemn btn-action read-more">Read More</a>
+                                        <a href="research_single.html?research=agriculture" class="btn btn-unsolemn btn-action read-more">Read More</a>
                                     </div>
                                 </article>
                             </div>
@@ -525,7 +534,7 @@
                                             complex -<i>omics</i> bigdata</h2>
                                         <p class="meta-text">Identification of novel expressed genes from
                                             transcriptomics studies, methylation patterns...</p>
-                                        <a href="#" class="btn btn-unsolemn btn-action read-more">Read More</a>
+                                        <a href="research_single.html?research=ngs" class="btn btn-unsolemn btn-action read-more">Read More</a>
                                     </div>
                                 </article>
                             </div>
