--- a/lab_conf-talk.html
+++ b/lab_conf-talk.html
@@ -145,8 +145,17 @@
                     <li>
                         <a href="index.html" title="Home">Home</a>
                     </li>
-                    <li>
-                        <a href="lab_research.html" title="Research">Research</a>
+                    <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" href="#" title="Events"
+                                data-animations="zoomIn">Research <span class="caret"></span></a>
+                            <ul class=" dropdown-menu" role="menu">
+                                <li>
+                                    <a href="lab_research.html" title="Books">Research Page</a>
+                                </li>
+                                <li  class="">
+                                    <a href="research_single.html?research=ai" title="Journal Articles">Research Single Page</a>
+                                </li>
+                            </ul>
                     </li>
                     <li class="dropdown">
                             <a href="people.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
