--- a/people.html
+++ b/people.html
@@ -156,8 +156,17 @@
                     <li>
                         <a href="index.html" title="Home">Home</a>
                     </li>
-                    <li>
-                        <a href="lab_research.html" title="Research">Research</a>
+                    <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" href="#" title="Events"
+                                data-animations="zoomIn">Research <span class="caret"></span></a>
+                            <ul class=" dropdown-menu" role="menu">
+                                <li>
+                                    <a href="lab_research.html" title="Books">Research Page</a>
+                                </li>
+                                <li  class="">
+                                    <a href="research_single.html?research=ai" title="Journal Articles">Research Single Page</a>
+                                </li>
+                            </ul>
                     </li>
                     <li class="dropdown active">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#" title="People"  data-hover="dropdown" data-animations="zoomIn">People <span class="caret"></span></a>
