--- a/lab_events.html
+++ b/lab_events.html
@@ -270,11 +270,11 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <article class="sabbi-events-item">
-                            <a href="events_single.html?event=psc" class="sabbi-events-link">
+                            <a href="events_single.html?event=pag" class="sabbi-events-link">
                                 <figure class="img-hover-zoom">
                                     <img class="sabbi-events-img img-responsive lab_event"
                                     style=""
-                                        src="assets/img/events/PAG-2019/resize-157657718254482381520190114112523.jpg"
+                                        src="assets/img/events/PAG-2019/g2.jpg"
                                         alt="thompson">
                                     <figcaption class="event_text">
                                         <h2 class="sabbi-events-title font-md__x " style="color: black;">Plant & Animal Genome Conference
