--- a/events_single.html
+++ b/events_single.html
@@ -223,6 +223,70 @@
     </div><!-- /.auth-breadcrumb-wrap -->
     <section class="sabbi-section stage_events_post stage_events_post-single">
         <div class="container">
+            <div class="events_post_single-sagment" id="pag" style="display: none;">
+                <div class="row">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        <article class="sabbi-events-item">
+                            <a href="#" class="sabbi-events-link">
+                                <figure>
+                                    <img class="sabbi-events-img img-responsive" style="width: 913px; height: 590px;" src="assets/img/events/PAG-2019/g2.jpg" alt="thompson">
+                                    <figcaption>
+                                        <h2 class="sabbi-events-title font-md__x" style="color: black;">Plant & Animal Genome Conference</h2>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                            <div class="events-item-meta">
+                                <div class="events-loc"><i class="ion-location"></i><span class="text">500 Hotel Circle N, San Diego, CA</span></div>
+                                <div class="events-date"><i class="ion-calendar"></i><span class="text">12<sup>th</sup> Jan 2019</span></div>
+                                <p class="events-item-meta-text" style="text-align: justify;"></p>Three researchers from the Bioinformatics group presented at the Plant Soils and Climate Showcase in the International lounge.
+                                    Cristian Loaiza presented his study on citrus greening disease. Naveen Duhan prepared a study on salt resistance in wheat, and Matthew Lister talked about our facility’s HPC.
+                                    All three gave research posters and answered questions about their work throughout the event.
+                                <br>
+                                    For more details, please visit <a target="_blank" href="http://www.usu.edu/today/index.cfm?id=58311">Click Here</a>
+                                </p>
+                            </div>
+                            <div class="events-item-media">
+                                <h4 class="sagment-title">From Media</h4>
+                                <div class="row events-item-media-scoup">
+                                    <div class="col-sm-4">
+                                        <figure>
+                                            <a href="assets/img/events/PSCshowcase_2019/e52e955f-604f-4c94-9c99-ac686bbe2f9f.JPG" data-toggle="lightbox" data-gallery="sabb-gallery"><img src="assets/img/events/PSCshowcase_2019/e52e955f-604f-4c94-9c99-ac686bbe2f9f.JPG" alt="" class="event_thumb img-responsive events-item-media-img"></a>
+                                        </figure>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <figure>
+                                            <a href="assets/img/events/PSCshowcase_2019/IMG_20190325_103245-e1557181881306.jpg" data-toggle="lightbox" data-gallery="sabb-gallery"><img src="assets/img/events/PSCshowcase_2019/IMG_20190325_103245-e1557181881306.jpg" alt="" class="event_thumb img-responsive events-item-media-img"></a>
+                                        </figure>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <figure>
+                                            <a href="assets/img/events/PSCshowcase_2019/IMG_20190325_104341-e1557181795537.jpg" data-toggle="lightbox" data-gallery="sabb-gallery"><img src="assets/img/events/PSCshowcase_2019/IMG_20190325_104341-e1557181795537.jpg" alt="" class="event_thumb img-responsive events-item-media-img"></a>
+                                        </figure>
+                                    </div>
+                                </div>
+                                <div class="row events-item-media-scoup">
+                                    <div class="col-sm-4">
+                                        <figure>
+                                            <a href="assets/img/events/PSCshowcase_2019/IMG_20190325_152608-e1557181842839.jpg" data-toggle="lightbox" data-gallery="sabb-gallery"><img src="assets/img/events/PSCshowcase_2019/IMG_20190325_152608-e1557181842839.jpg" alt="" class="event_thumb img-responsive events-item-media-img"></a>
+                                        </figure>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <figure>
+                                            <a href="assets/img/events/PSCshowcase_2019/IMG_20190325_152650-e1557181720788.jpg" data-toggle="lightbox" data-gallery="sabb-gallery"><img src="assets/img/events/PSCshowcase_2019/IMG_20190325_152650-e1557181720788.jpg" alt="" class="event_thumb img-responsive events-item-media-img"></a>
+                                        </figure>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <figure>
+                                            <a href="assets/img/events/PSCshowcase_2019/IMG_20190325_153142-e1557181757597.jpg" data-toggle="lightbox" data-gallery="sabb-gallery"><img src="assets/img/events/PSCshowcase_2019/IMG_20190325_153142-e1557181757597.jpg" alt="" class="event_thumb img-responsive events-item-media-img"></a>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </article><!-- /.sabbi-events-item -->
+                    </div>
+                    
+                </div>
+            </div><!-- /.events_post_single-sagment -->
             <div class="events_post_single-sagment" id="psc" style="display: none;">
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2">
