--- a/index.html
+++ b/index.html
@@ -295,7 +295,10 @@
                                     <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank"
                                         title="RB-Pred">RB-Pred</a>
                                 </li>
-                                
+                                <li>
+                                    <a href="ranchSATdb.html" target="_blank"
+                                        title="deepHPI">ranchSATdb</a>
+                                </li>
                             </ul>
                         </li>
                         <li class="dropdown">
