Add existing file

--- a/events.html
+++ b/events.html
@@ -224,6 +224,9 @@ svg {
                             <li>
                                 <a href="ourteam.html" title="Our Team">Our Team</a>
                             </li>
+                            <li class="">
+                                <a href="alumni.html" title="Our Team">Alumni</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -354,7 +357,7 @@ svg {
               <a href="#tabcontent" class="tablinks" onclick="openTools(event, 'Bio')"><i class="fas fa-burn"></i>Bioenergy</a>
               <a href="#tabcontent" class="tablinks" onclick="openTools(event, 'Misc')"><i class="fas fa-burn"></i>Miscellaneous</a>
             </nav>
-          </div>
+    </div>
 
     
         <div class="container">
