--- a/lab_conf-talk.html
+++ b/lab_conf-talk.html
@@ -166,6 +166,9 @@
                             <li>
                                 <a href="ourteam.html" title="Our Team">Our Team</a>
                             </li>
+                            <li class="">
+                                <a href="alumni.html" title="Our Team">Alumni</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="dropdown active">
