--- a/lab_events.html
+++ b/lab_events.html
@@ -142,6 +142,9 @@
                             <li>
                                 <a href="ourteam.html" title="Our Team">Our Team</a>
                             </li>
+                            <li class="">
+                                <a href="alumni.html" title="Our Team">Alumni</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -265,6 +268,33 @@
     </div><!-- /.auth-breadcrumb-wrap -->
     <section class="sabbi-section stage_events_post">
         <div class="container">
+            <div class="events_post-sagment tabcontent" id="20">
+                <h4 class="sagment-title">2020</h4>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <article class="sabbi-events-item">
+                            <a href="events_single.html?event=pag" class="sabbi-events-link">
+                                <figure class="img-hover-zoom">
+                                    <img class="sabbi-events-img img-responsive lab_event"
+                                    style=""
+                                        src="assets/img/events/PAG-2019/g2.jpg"
+                                        alt="thompson">
+                                    <figcaption class="event_text">
+                                        <h2 class="sabbi-events-title font-md__x " style="color: black;">Plant & Animal Genome Conference
+                                        </h2>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                            <div class="events-item-meta">
+                                <div class="events-loc"><i class="ion-location"></i><span class="text">500 Hotel Circle N,
+                                        San Diego, CA</span></div>
+                                <div class="events-date"><i class="ion-calendar"></i><span class="text">12<sup>th</sup>
+                                        Jan 2019</span></div>
+                            </div>
+                        </article><!-- /.sabbi-events-item -->
+                    </div>
+                </div>
+            </div><!-- /.events_post-sagment -->
             <div class="events_post-sagment tabcontent" id="19">
                 <h4 class="sagment-title">2019</h4>
                 <div class="row">
