--- a/lab_research.html
+++ b/lab_research.html
@@ -163,6 +163,9 @@
                             <li class="">
                                 <a href="ourteam.html" title="Our Team">Our Team</a>
                             </li>
+                            <li class="">
+                                <a href="alumni.html" title="Our Team">Alumni</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="dropdown">
