--- a/news.html
+++ b/news.html
@@ -95,6 +95,109 @@ img {
   max-width: 100%;
 }
 
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+.wrapper{
+  text-align:center;
+  margin: 10px auto;
+}
+
+.tabs{
+  margin-top:0px;
+  font-size:15px;
+  padding:0px;
+  list-style:none;
+  background:#fff;
+  box-shadow:0px 5px 20px rgba(0,0,0,0.1);
+  display:inline-block;
+  border-radius:50px;
+  position:relative;
+}
+
+.tabs a{
+  text-decoration:none;
+  color: #777;
+  text-transform:uppercase;
+  padding:10px 20px;
+  display:inline-block;
+  position:relative;
+  z-index:1;
+  transition-duration:0.6s;
+}
+
+.tabs a.active{
+  color:#fff;
+}
+
+.tabs a i{
+  margin-right:5px;
+}
+
+.tabs .selector{
+  height:100%;
+  display:inline-block;
+  position:absolute;
+  left:0px;
+  top:0px;
+  z-index:1;
+  border-radius:50px;
+  transition-duration:0.6s;
+  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  
+  background: #05abe0;
+  background: -moz-linear-gradient(45deg, #05abe0 0%, #8200f4 100%);
+  background: -webkit-linear-gradient(45deg, #05abe0 0%,#8200f4 100%);
+  background: linear-gradient(45deg, #05abe0 0%,#8200f4 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#05abe0', endColorstr='#8200f4',GradientType=1 );
+}
+
+.fancy-header {
+  position: relative;
+  height: 200px;
+  background-image: linear-gradient(rgb(15, 36, 57), rgb(15, 36, 57));
+}
+
+h4 {
+  padding: 100px 0;
+  font: 44px "Arial";
+  text-align: center;
+}
+
+.fancy-header h4 {
+  color: white;
+}
+
+svg {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+}
+
+.vl {
+  border-left: 1px solid #0f2439;
+  height: 30px;
+  margin-top: 10px;
+  margin-left: 85px;
+  /* position: absolute; */
+}
+
+.bottom-right {
+  /* position: absolute; */
+  bottom: 8px;
+  right: 16px;
+}
+
+.logo_text1 {
+    color: #0f2439;
+    /* background-image: url(https://media.giphy.com/media/Lr2xYGw6IMVofbjRSu/giphy.gif); */
+	font-weight: 700;
+    letter-spacing: 12px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    /* color: white;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; */
+}
+
     </style>
 </head>
 <body class="auth-theme-rashmore page-futuremember">
@@ -142,6 +245,9 @@ img {
                                 </li>
                                 <li class="">
                                     <a href="ourteam.html" title="Our Team">Our Team</a>
+                                </li>
+                                <li class="">
+                                    <a href="alumni.html" title="Our Team">Alumni</a>
                                 </li>
                             </ul>
                         </li>
@@ -268,6 +374,14 @@ img {
 
 <div class="container">
   <div class="row">
+    <div class="wrapper">
+        <nav class="tabs">
+          <div class="selector"></div>
+          <a href="#tabcontent" class="active tablinks" onclick="openAllTools(event, 'Academic_News')"><i class="fab fa-superpowers"></i>Academic News</a>
+          <a href="#tabcontent" class="tablinks" onclick="openTools(event, 'News')"><i class="fas fa-hand-rock"></i>News</a>
+
+        </nav>
+    </div>
     <!-- href="news_single.html?news=news1" -->
     <a class="sabbi-events-link">
     <div class="column-66">
@@ -497,6 +611,28 @@ img {
         e.src='//www.google-analytics.com/analytics.js';
         r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
         ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+
+        var tabs = $('.tabs');
+var selector = $('.tabs').find('a').length;
+//var selector = $(".tabs").find(".selector");
+var activeItem = tabs.find('.active');
+var activeWidth = activeItem.innerWidth();
+$(".selector").css({
+  "left": activeItem.position.left + "px", 
+  "width": activeWidth + "px"
+});
+
+$(".tabs").on("click","a",function(e){
+  e.preventDefault();
+  $('.tabs a').removeClass("active");
+  $(this).addClass('active');
+  var activeWidth = $(this).innerWidth();
+  var itemPos = $(this).position();
+  $(".selector").css({
+    "left":itemPos.left + "px", 
+    "width": activeWidth + "px"
+  });
+});
     </script>
 </body>
 </html>
