Added myself to ourteam

--- a/alumni.html
+++ b/alumni.html
@@ -298,7 +298,8 @@
 
                                             </p>
                                             <p id="AboutShelby" class="teamcontent" style="display: none;">
-
+                                              Shelby is a Biochemistry major who aspires to go into software engineering. He has worked with mobile apps,
+                                              websites (including the front and back end), and desktop applications. He is a percussionist in his spare time.
                                             </p>
                                             <p id="AboutAxat" class="teamcontent" style="display: none;">
 
