--- a/ourteam.html
+++ b/ourteam.html
@@ -278,7 +278,7 @@
                        <h4 class="modal-title" id="titleSuyash" style="display: none;">Suyash Mhetre</h4>
                        <h4 class="modal-title" id="titleNikhil" style="display: none;">Nikhil Sai</h4>
                        <h4 class="modal-title" id="titleMatthew" style="display: none;">Matthew Lister</h4>
-                       <h4 class="modal-title" id="titleShelby" style="display: none;">Shelby Mccowan</h4>
+                       <h4 class="modal-title" id="titleShelby" style="display: none;">Shelby McCowan</h4>
                        <h4 class="modal-title" id="titleAxat" style="display: none;">Axat Kumar</h4>
                        <h4 class="modal-title" id="titleUdarika" style="display: none;">Udarika Ediriweera</h4>
                        <h4 class="modal-title" id="titleRaul" style="display: none;">Raul Ramirez</h4>
@@ -291,7 +291,7 @@
                        <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleSuyash">MS Student | MIS</div>
                        <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleNikhil">MS Student | CS</div>
                        <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleMatthew">HPC administrator | CS</div>
-                       <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleShelby">HPC administrator</div>
+                       <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleShelby">HPC administrator | BSc Biochemistry</div>
                        <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleAxat">MS Student | CS</div>
                        <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleUdarika"></div>
                        <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleRaul"></div>
@@ -359,7 +359,8 @@
 
                                          </p>
                                          <p id="AboutShelby" class="teamcontent" style="display: none;">
-
+                                           Shelby is a Biochemistry major who aspires to go into software engineering. He has worked with mobile apps,
+                                           websites (including the front and back end), and desktop applications. He is a percussionist in his spare time.
                                          </p>
                                          <p id="AboutAxat" class="teamcontent" style="display: none;">
 
@@ -630,13 +631,13 @@
                                  <figure class="article-container">
                                      <img class="img-responsive" id="Shelby" src="assets/img/profile/profile_pic.jpeg" style="width: 210px; height: 210px" alt="sabbi-profile-pic">
                                      <figcaption>
-                                         <h3 class="fig-title">Shelby</h3>
+                                         <h3 class="fig-title">Shelby McCowan</h3>
                                          <div class="middle">
                                                  <button id="modalbtn" onclick="openAboutModal(event,'Shelby','AboutShelby','titleShelby','subtitleShelby','ShelbyEmail')" style=" background: transparent; border: none !important;">
                                                    <div class="text">About</div>
                                                  </button>
                                              </div>
-                                         <div class="fig-title-des">HPC administrator</div>
+                                         <div class="fig-title-des">HPC administrator | BSc Biochemistry</div>
                                          <!-- <div class="fig-meta">
                                              <p class="fig-cal"><strong>Call:</strong> <span>+61(07)373 53921</span></p>
                                              <p class="fig-mail"><strong>Email:</strong> <span>nam-trung.nguyenEmailgriffith.edu.au</span></p>
